--- a/html/index.html
+++ b/html/index.html
@@ -23,9 +23,9 @@
     <!-- Profile section -->
     <div class="middle-container">
         <div class="profile">
-          <img src="/images/rajat.jpg" alt="" class="profile-picture">
+          <img src="/images/rajat.jpg" alt="" class="profile-icon">
           <h2>Hello</h2>
-          <p>I am Rajat Dua 21 years old web developer.</p>
+          <p class="intro">I am 21 Years old frontend web developer and designer.I have started my career as a developer in 2018.I am also a growth hacker. </p>
             </div>
         <hr>
         <div class="skills">
@@ -33,20 +33,20 @@
           <div class="skill-row">
             <img class="skills-icon" src="/images/programmer.gif" alt="">
             <h3>Frontend Developer</h3>
-            <p>Certified in C , C++. I have made many frontend development projects.</p>
+            <p>Certified in C , C++. I have made many frontend projects.</p>
           </div>
           <div class="skill-row">
             <img class="media-icon" src="/images/crazymedia.jpg" alt="">
             <h3>Instaprenuer</h3>
-            <p>I am Growth hacker. Handling Millions of Base on instagram.</p>
+            <p>I am Growth Hacker. Handling Millions of Base on instagram.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <h3>Excited To Know About Frontend Development?</h3>
+          <p class="contact-message">Do you want to make your website look beautiful?😍 Let's talk about that. Feel free to contact me any time.</p>
+          <a class="btn" href="mailto:rajatdua777737@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
@@ -55,7 +55,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2018 Name Surname.</p>
+        <p class="copyright">© 2018 Name Surname.</p>
       </div>
       
 </body>
