--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <body>
     <!-- Name Section -->
     <div class="top-container">
-        <img src="/images/cloud.png" alt="cloud" class="top-cloud">
+        <img src="images/cloud.png" alt="cloud" class="top-cloud">
         <h1>I am Rajat Dua</h1>
         <h2>a web developer.</h2>
-        <img src="/images/cloud.png" alt="cloud" class="bottom-cloud">
-        <img src="/images/mountain.png" alt="mountain">
+        <img src="images/cloud.png" alt="cloud" class="bottom-cloud">
+        <img src="images/mountain.png" alt="mountain">
     </div>
 
     <!-- Profile section -->
     <div class="middle-container">
         <div class="profile">
-          <img src="/images/rajat.jpg" alt="" class="profile-icon">
+          <img src="images/rajat.jpg" alt="" class="profile-icon">
           <h2>Hello</h2>
           <p class="intro">I am 21 Years old frontend web developer and designer.I have started my career as a developer in 2018.I am also a growth hacker. </p>
             </div>
@@ -31,12 +31,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="skills-icon" src="/images/programmer.gif" alt="">
+            <img class="skills-icon" src="images/programmer.gif" alt="">
             <h3>Frontend Developer</h3>
             <p>Certified in C , C++. I have made many frontend projects.</p>
           </div>
           <div class="skill-row">
-            <img class="media-icon" src="/images/crazymedia.jpg" alt="">
+            <img class="media-icon" src="images/crazymedia.jpg" alt="">
             <h3>Instaprenuer</h3>
             <p>I am Growth Hacker. Handling Millions of Base on instagram.</p>
           </div>
